--- a/EWT/EWT-UI/Views/Shared/Error.cshtml
+++ b/EWT/EWT-UI/Views/Shared/Error.cshtml
@@ -9,5 +9,6 @@
         <h1>Error.</h1>
         <h2>An error occurred while processing your request.</h2>
     </hgroup>
+    <code>Developed By Mushfiqur Rahman Abir</code>
 </body>
 </html>
