--- a/EWT/EWT-UI/Views/Home/Index.cshtml
+++ b/EWT/EWT-UI/Views/Home/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿<main>
-    <section class="row" aria-labelledby="aspnetTitle">
-        <h1 id="aspnetTitle">ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-        <p><a href="https://asp.net" class="btn btn-primary btn-md">Learn more &raquo;</a></p>
+    <section>
+        @Html.React("HelloWorld", "Hello")
+
+
+        @* Render the JSX files in Razor Files *@
+        <script type="module" src="~/Scripts/JSX/helloReact.jsx"></script>
+        @Html.ReactInitJavaScript()
     </section>
 </main>
