--- a/EWT/EWT-UI/Views/Shared/_Layout.cshtml
+++ b/EWT/EWT-UI/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+    <script src="~/Scripts/Angular/App.js"></script>
 </head>
 <body ng-app="EWT">
 
