Add a new login controlller

--- a/EWT/EWT-UI/Views/Shared/_Layout.cshtml
+++ b/EWT/EWT-UI/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <ul class="navbar-nav flex-grow-1">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Movies", "Movies", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Login", "Index", "Login", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
