Complete the login for emp

--- a/EWT/EWT-UI/Views/Login/Index.cshtml
+++ b/EWT/EWT-UI/Views/Login/Index.cshtml
@@ -3,20 +3,10 @@
 }
 
 <!DOCTYPE html>
-<html ng-app="EWTApp">
+<html>
 <head>
     <title>Login: EWT</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.2/angular.min.js"></script>
-    <script>
-        var app = angular.module("EWTApp", []);
-
-        app.controller("LoginController", function($scope) {
-            // Initialize any required data or functions
-        });
-    </script>
     <style>
-        /* Add your custom styles here */
         body {
             background-color: #f8f9fa;
         }
@@ -33,6 +23,7 @@
         }
     </style>
 </head>
+
 <body ng-controller="LoginController">
     <div class="container">
         <div class="row">
