Add employee dashboard page and controller

--- a/EWT/EWT-UI/Views/Shared/_Layout.cshtml
+++ b/EWT/EWT-UI/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Movies", "Movies", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Login", "Index", "Login", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Employee Dashboard", "Dashboard", "EmpDashboard", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
