Make the logo smaller and add my name to footer

--- a/EWT/EWT-UI/Views/Home/Index.cshtml
+++ b/EWT/EWT-UI/Views/Home/Index.cshtml
@@ -1,13 +1,10 @@
-﻿<div ng-controller="HomeController">
-<header>
-    <h1 class="text-center">{{ welcomeMessage }}</h1>
-</header>
-<main>
+﻿<main>
     <br />
-    <img class="img-fluid" src="~/Content/Images/movie_roll.png" />
+    <h2 class="text-center">Welcome to EzWatchTicketing System</h2>
+    <img class="img-fluid" src="~/Content/Images/movie_roll.png" alt="EWT Home Image" width="300" height="200" />
     <br />
-    <h2 >Discover the Latest Movies</h2>
+    <br />
+    <h2>Discover the Latest Movies</h2>
     <p>Book your tickets online and enjoy a seamless movie experience.</p>
     <a href="/Home/movies" class="btn btn-primary">Explore Movies</a>
 </main>
-</div>
