--- a/EWT/EWT-UI/Views/Shared/_Layout.cshtml
+++ b/EWT/EWT-UI/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - EzWatchTicketing</p>
+            <p>&copy; @DateTime.Now.Year - EzWatchTicketing | <code>Mushfiqur Rahman Abir</code></p>
         </footer>
     </div>
 
